--- a/avaliacaoccr/application/script/css/system.css
+++ b/avaliacaoccr/application/script/css/system.css
@@ -111,6 +111,7 @@ h2{
 	-moz-border-radius: 0px 10px 10px 0px; /* Para Firefox */
 	-webkit-border-radius: 0px 10px 10px 0px; /*Para Safari e Chrome */
 	border-radius: 0px 10px 10px 0px; /* Para Opera 10.5+*/
+	height: 300px;
 }
 #rodape{
 	width: 1024px;
@@ -181,7 +182,7 @@ ul{
 
 
 #menu ul{
-	display:none;
+	display:block;
 	margin-left: 10px;
 }
 
