Gráfico para o relatório feito.

--- a/avaliacaoccr/application/script/css/system.css
+++ b/avaliacaoccr/application/script/css/system.css
@@ -112,6 +112,7 @@ h2{
 	-webkit-border-radius: 0px 10px 10px 0px; /*Para Safari e Chrome */
 	border-radius: 0px 10px 10px 0px; /* Para Opera 10.5+*/
 	height: 300px;
+	overflow:auto;
 }
 #rodape{
 	width: 1024px;
