--- a/avaliacaoccr/application/script/css/system.css
+++ b/avaliacaoccr/application/script/css/system.css
@@ -48,7 +48,7 @@ body{
 	font-size: 15px;  
 }
 #topo{
-  	border-top: 5px solid #7137c8;
+  	border-top: 5px solid #026331;
 }
 #topo img{
 	margin-top: 10px;
